name:   TCHHH
version:        0.5
license:        MIT
Author:         Yuichiro Hanada
maintainer:     peanut2626@gmail.com
synopsis:      TUI Twitter Client written in Haskell
stability:      Experimental
cabal-version:  >= 1.6
build-Type:     Simple

Executable TCHHH
 build-depends:
     base >= 4 && < 5
     , aeson >= 0.7.0.0
     , ansi-terminal >= 0.6.1.1
     , authenticate-oauth
     , attoparsec >= 0.8.6.1
     , bytestring
     , case-insensitive
     , conduit < 1.1
     , containers
     , data-default >= 0.5 && < 0.6
     , directory
     , filepath
     , http-conduit
     , monad-logger
     , mtl
     , network
     , resourcet
     , text
     , twitter-conduit
     , twitter-types

 Main-Is:Main.hs
 Hs-Source-Dirs: src
 ghc-options: -Wall
