name:   TCHHH
version:        0.5
license:        MIT
Author:         Yuichiro Hanada
maintainer:     peanut2626@gmail.com
synopsis:      TUI Twitter Client written in Haskell
stability:      Experimental
cabal-version:  >= 1.6
build-Type:     Simple

Executable TCHHH
 build-depends:
     base >= 4 && < 5
     , aeson == 0.7.0.6
     , ansi-terminal == 0.6.1.1
     , authenticate-oauth == 1.5
     , attoparsec == 0.12.1.1
     , bytestring == 0.10.0.2
     , case-insensitive == 1.2.0.0
     , conduit == 1.1.7
     , containers == 0.5.0.0
     , data-default == 0.5.3
     , directory == 1.2.0.1
     , filepath == 1.3.0.1
     , http-conduit == 2.1.4
     , monad-logger == 0.3.7.1
     , mtl == 2.2.1
     , network == 2.5.0.0
     , resourcet == 1.1.2.3
     , text == 1.1.1.3
     , twitter-conduit == 0.0.5.2
     , twitter-types == 0.3.20140801

 Main-Is:Main.hs
 Hs-Source-Dirs: src
 ghc-options: -Wall
