name:   TCHHH
version:        0.5.1
license:        MIT
Author:         Yuichiro Hanada
maintainer:     peanut2626@gmail.com
synopsis:      TUI Twitter Client written in Haskell
stability:      Experimental
cabal-version:  >= 1.6
build-Type:     Simple

Executable TCHHH
 build-depends:
     base >= 4 && < 5
     , aeson == 0.8.0.0
     , ansi-terminal == 0.6.1.1
     , authenticate-oauth == 1.5
     , attoparsec == 0.12.1.2
     , bytestring == 0.10.4.0
     , case-insensitive == 1.2.0.1
     , conduit == 1.2.0.2
     , containers == 0.5.5.1
     , data-default == 0.5.3
     , directory == 1.2.1.0
     , filepath == 1.3.0.2
     , http-conduit == 2.1.4.3
     , monad-logger == 0.3.7.2
     , mtl == 2.2.1
     , network == 2.6.0.2
     , network-uri == 2.6.0.1
     , pit == 0.3.1
     , resourcet == 1.1.2.3
     , text == 1.2.0.0
     , twitter-conduit == 0.0.7
     , twitter-types == 0.5.0

 Main-Is:Main.hs
 Hs-Source-Dirs: src
 ghc-options: -Wall
